--- a/config.json
+++ b/config.json
@@ -3,14 +3,14 @@
     "staging": {
       "apiKey": "[apikey]",
       "password": "[password]",
-      "url": "[url].myshopify.com",
+      "url": "staging-[url].myshopify.com",
       "themeId": null,
       "options": {"basePath": "deploy/"}
     },
-    "staging-billy": {
+    "dev": {
       "apiKey": "[apikey]",
       "password": "[password]",
-      "url": "[url].myshopify.com",
+      "url": "dev-[url].myshopify.com",
       "themeId": null,
       "options": {"basePath": "deploy/"}
     }
